# clearml-test

./: .env  .gitignore  README.md  clearml.conf.example  docker-compose.yml  pyproject.toml
pipelines/: dataset_basic.py  full_tabular_data_process_pipeline_example.py  pipeline_basic.py
