[tool.poetry]
name = "clearml-test"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
clearml-serving = "^1.3.4"
kaleido = "0.2.1"
pandas = "^2.2.3"
scipy = "^1.15.2"
pydantic-core = "<2.30"
matplotlib = "^3.10.1"
plotly = "<6.0"
ipython = "^8.28.0"
ipywidgets = "^8.1.5"
jupyter-core = "^5.7.2"
jupyterlab = "^4.3.1"
xgboost = "^2.1.4"
scikit-learn = "^1.6.1"
optuna = "^4.2.1"
hydra-core = "^1.3.2"
bokeh = "^3.6.3"
bokeh-sampledata = "^2024.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
